public/css/primary.css
/* ... */
.btn-mentor-icon {
    display: block;
}

.btn-mentor-animate {
    animation-name: search-expand;
    animation-duration: 2s;
}

.btn-mentor-pair {
    cursor: pointer;
    display: inline-block;
    align-self: center;
    width: 150px;
    padding: 10px 20px;
    border-radius: 5px;
    background-color: var(--color-secondary);
    text-align: center;
    color: var(--color-primary);
}

.btn-mentor-retry {
    cursor: pointer;
    display: inline-block;
    align-self: center;
    width: 150px;
    padding: 10px 20px;
    border-radius: 5px;
    border: 2px solid var(--color-secondary);
    text-align: center;
    color: var(--color-secondary);
}

a.btn-mentor-pair-text {
    text-transform: uppercase;
    letter-spacing: 1px;
    text-shadow: none;
    text-decoration: none;
    color: white;
}

svg.icon-user {
    margin-left: 25px;
    margin-right: 20px;
}

svg.icon-forward {
    margin-left: auto;
    margin-right: 25px;
}

.btn-settings {
    align-self: flex-start;
    height: 20px;
    width: 10px;
}

.btn-account {
    display: flex;
    align-self: flex-start;
    height: 20px;
    width: 10px;
}

.btn-rematch {
    border: 1px solid black;
    padding: 10px 20px;
}

.tab {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    box-shadow: 0 -1px 20px 0px gray;
    z-index: 50;
}

.tab a {
    color: var(--color-secondary);
}

.container {
    width: 100%;
    color: black;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: white;
}

.btn-edit{
    margin-top: 5px;
    margin-bottom: 10px;
    justify-content: center;
    display: flex;
    text-align: center;
}

/* Account */
.account-container {
    display: flex;
    flex-direction: column;
}

.add-friend-btn
{
    align-self: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    background-color: var(--color-secondary);
    color: white;
    width: 150px;
    text-transform: uppercase;
    letter-spacing: .7px;
    padding: 10px 20px;
    border-radius: 5px;
    box-shadow: 2px 2px 6px 0px gray;
}

#addFriendForm {
    align-self: center;
}

.account-description {
    text-align: center;
    font-size: 16px;
    font-weight: bold;
}

.profile-header
{
    color: white;
    background-color: var(--color-primary);
}

.account-block {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    font-size: 14px;
    margin: 0 auto 10px auto; 
    padding: 10px;
    width: 330px;
    border-radius: 5px;
    background-color: var(--color-gray-light);
}

.account-block-text {
    background-color: #fff;
    padding: 8px;
    border-radius: 5px;
}

.account-block-workout {
    background-color: var(--color-primary);
    color: var(--color-font-light);
    padding: 8px;
    border-radius: 5px;
}

.mentorship-status-available {
    background-color: var(--color-quaternary);
    color: var(--color-font-light);
    padding: 8px;
    border-radius: 5px;
}

.mentorship-status-unavailable {
    background-color: crimson;
    color: var(--color-font-light);
    padding: 8px;
    border-radius: 5px;
}

#profile-text {
    align-items: center;
    justify-content: center;
    display: flex;
}

.account-photo {
    align-self: center;
    margin-top: 20px;
    height: 150px;
    width: 150px;
    clip-path: circle(50% at 50% 50%);
    -webkit-clip-path: circle(50% at 50% 50%);
    shape-outside: circle(50% at 50% 50%);
    -webkit-shape-outside: circle(50% at 50% 50%);
}

.account-photo img {
    width: 150px;
    height: 150px;
}

.account-photo-small {
    height: 35px;
    width: 35px;
    position: relative;
    margin-left: 20px;
    margin-right: 20px;
    align-self: center;
    clip-path: circle(50% at 50% 50%);
    -webkit-clip-path: circle(50% at 50% 50%);
    shape-outside: circle(50% at 50% 50%);
    -webkit-shape-outside: circle(50% at 50% 50%);
}

.account-photo-small img {
    height: 35px;
    width: 35px;
}

.account-workout {
    align-items: center;
    align-self: center;
    padding: 15px;
    border-radius: 5px;
    border: 2px solid var(--color-secondary);
    justify-content: center;
}

.account-workout input[type="radio"]
{
    display: none;
}

.account-workout-label {
    text-align: center;
    padding: 0 0 0 0;
    margin: 0 0 0 0;
}

.account-workout label
{
    align-items: center;
    justify-content: center;
    display: inline-block;
    border-radius: 5px;
    border: 1px solid var(--color-secondary);
    padding: 4px 11px;
    font-family: Arial;
    font-size: 16px;
    cursor: pointer;
}

.account-workout input[type="radio"]:checked+label
{
    background-color: #bbb;
}

.logo {
    width: 50px;
    height: 50px;
}

/* Page Titles */
.header-mentor {
    background-color: var(--color-secondary);
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 60px;
    margin: 0 0 0 0;
}

.header-friends {
    background-color: var(--color-tertiary);
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 60px;
    margin: 0 0 0 0;
}

.header-profile {
    background-color: var(--color-quinary);
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 60px;
    margin: 0 0 0 0;
}

.header-settings {
    background-color: var(--color-quaternary);
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 60px;
    margin: 0 0 0 0;
}

.header-font {
    margin-left: 20px;
    text-transform: uppercase;
    letter-spacing: .5px;
    font-weight: bolder;
    color: white;
}

a.header-font-mentor {
    color: var(--color-font-light);
}


/*Toggle Switch Section*/ 

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
  }
/* ... */

